<resources>
    <string name="app_name">My New Sample</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="let_s_get_you_all_setup_so_you_can_verify_your_personal_account">Let\'s get you all setup so you can verify your personal account.</string>
    <string name="select_semester">Select Semester</string>
    <string name="select_university">Select University</string>
    <string name="select_stream">Select Stream</string>
    <string name="select_exam">Select Exam</string>
    <string name="enter_date_of_birth">Enter Date Of Birth</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="proceed">Proceed</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="_00_00">00:00</string>
    <string name="wrong_otp_entered">Wrong OTP entered</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="changer_mobile_number">Changer Mobile Number</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="create_password">Create Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_statistic">Statistics</string>
    <string name="title_askDoubt">AskDoubt</string>
    <string name="title_test">Test</string>
    <string name="title_more">More</string>
</resources>