<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_lined"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_statistic"
        android:icon="@drawable/statistical_lined"
        android:title="@string/title_statistic" />

    <item
        android:id="@+id/navigation_askDoubt"
        android:icon="@drawable/ask_doubt_lined"
        android:title="@string/title_askDoubt" />

    <item
        android:id="@+id/navigation_test"
        android:icon="@drawable/exam_lined"
        android:title="@string/title_test" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more_icon"
        android:title="@string/title_more" />

</menu>