<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nikhil.mynewsample.screen.dashboard.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_askDoubt"
        android:name="com.nikhil.mynewsample.screen.dashboard.ui.askDoubt.AskDoubtFragment"
        android:label="@string/title_askDoubt"
        tools:layout="@layout/fragment_ask_doubt" />

    <fragment
        android:id="@+id/navigation_statistic"
        android:name="com.nikhil.mynewsample.screen.dashboard.ui.statistic.StatisticFragment"
        android:label="@string/title_statistic"
        tools:layout="@layout/fragment_statistic" />

    <fragment
        android:id="@+id/navigation_test"
        android:name="com.nikhil.mynewsample.screen.dashboard.ui.test.TestFragment"
        android:label="@string/title_test"
        tools:layout="@layout/fragment_test" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.nikhil.mynewsample.screen.dashboard.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

</navigation>