<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/carbon"
    android:padding="@dimen/dimen20"
    tools:context=".screen.login.mobileLogin.MobileLoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobileInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/enter_mobile_number"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="10"
            android:paddingStart="@dimen/dimen12"
            android:paddingEnd="@dimen/dimen12"
            android:textColor="@color/white"
            tools:ignore="KeyboardInaccessibleWidget" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetOtp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen50"
        android:background="@drawable/btn_custom"
        android:text="@string/get_otp"
        app:backgroundTint="@color/black"
        android:layout_marginTop="@dimen/dimen24"
        app:layout_constraintEnd_toEndOf="@+id/mobileInputLayout"
        app:layout_constraintStart_toStartOf="@+id/mobileInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/mobileInputLayout" />

    <TextView
        android:id="@+id/tvChangeNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen24"
        android:text="@string/changer_mobile_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetOtp" />

</androidx.constraintlayout.widget.ConstraintLayout>